--- a/.gitconfig
+++ b/.gitconfig
@@ -9,8 +9,8 @@
 # [credential]
 # 	helper = wincred
 
-[url "git@github.com:"]
-    pushInsteadOf = https://github.com/
+# [url "git@github.com:"]
+#     pushInsteadOf = https://github.com/
 
 [rebase]
 	autostash = true
