--- a/.config/alacritty.yml
+++ b/.config/alacritty.yml
@@ -832,12 +832,12 @@ key_bindings:
   #- { key: F,              mods: Command,            action: SearchForward    }
   #- { key: B,              mods: Command,            action: SearchBackward   }
 
-#debug:
+debug:
   # Display the time it takes to redraw each frame.
   #render_timer: false
 
   # Keep the log file after quitting Alacritty.
-  #persistent_logging: false
+  persistent_logging: true
 
   # Log level
   #
@@ -848,7 +848,7 @@ key_bindings:
   #   - Info
   #   - Debug
   #   - Trace
-  #log_level: Warn
+  log_level: Warn
 
   # Print all received window events.
   #print_events: false
